--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/graphiql
+
+server.port=9090
+
+spring.data.mongodb.uri=mongodb+srv://nevin:nevin@nevin.0pcn3xn.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=sample_analytics
