--- a/build.gradle
+++ b/build.gradle
@@ -15,17 +15,31 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
 
 	implementation 'com.intuit.graphql:graphql-filter-java:1.0.1-SNAPSHOT'
 
+
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
+//	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.0.3'
+
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+
+	implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.8.1'
+
+
+
+
+
 	//Thanks for using https://jar-download.com
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework:spring-webflux'
-	testImplementation 'org.springframework.graphql:spring-graphql-test'
+	implementation group: 'org.springframework', name: 'spring-aspects', version: '3.2.4.RELEASE'
+
 
 	// https://projectlombok.org
 	compileOnly 'org.projectlombok:lombok:1.18.26'
