--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.graphql.graphiql.enabled=true
-spring.graphql.graphiql.path=/graphiql
+spring.graphql.graphiql.path=/customeGQLurl
 
 server.port=9090
 
 spring.data.mongodb.uri=mongodb+srv://nevin:nevin@nevin.0pcn3xn.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=sample_analytics
+
+spring.data.mongodb.uuid-representation=standard
